[package]
name = "tosic-llm"
version = "0.1.0"
edition = "2024"

[package.metadata.docs.rs]
features = ["doc-utils"]
all-features = true
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[lib]
test = true
doctest = true

[workspace.dependencies]
thiserror = "2.0.7"
tosic-utils = { version = "0.2.3", features = ["env", "dotenv", "tracing"], registry = "gitea" }
tracing = { version = "0.1.41", features = ["log"] }
serde_json = "1.0.133"
utoipa = { version = "5.2.0", features = ["actix_extras", "debug", "rc_schema", "non_strict_integers", "chrono", "uuid", "url"] }

[dependencies]
derive_more = { version = "2.0.1", features = ["full"] }
reqwest = { version = "0.12.12", default-features = false, features = ["json", "stream", "rustls-tls", "charset", "http2"] }
serde = { version = "1.0.217", features = ["derive"] }
futures-util = "0.3.31"
tokio-stream = "0.1.17"
bytes = { version =  "1.10.0", features = ["serde"] }
tosic-utils = { workspace = true }
tracing.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url = { version =  "2.5.4", features = ["serde"] }
utoipa.workspace = true
async-trait = "0.1.86"

[dev-dependencies]
tosic-llm = { path = ".", features = ["doc-utils"] }
tokio = { version = "1.43.0", features = ["full"] }

[features]
default = []
doc-utils = []
